--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+
 .App {
   text-align: center;
+  height: 100vh;
+  background-color: #282c34;
+  color: white;
 }
 
 .App-logo {
@@ -9,19 +13,18 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 3s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #22262c;
+  min-height: 15vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
@@ -35,4 +38,106 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.algorithmSelector {
+  margin: auto;
+  margin-left: 5px;
+  outline: none;
+  border-radius: 0.25em;
+  padding: 0.25em;
+  background-color: #22262c;
+  color: white;
+  border: none;
+  font-size: calc(10px + 2vmin);
+}
+
+.algorithmSelectorWrapper {
+  margin: auto;
+  margin-left: 50px;
+}
+
+.body {
+  height: 80vh;
+  width: 100vw;
+  gap: 20px;
+}
+
+.flexbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.parametersTable {
+  background-color: #22262c;
+  height: 70%;
+  width: 20%;
+  flex-direction: column;
+  border: 2px solid rgb(31, 36, 41);
+  border-radius: 5%;
+  gap: 10px;
+}
+
+.slider {
+  width: 200px;
+}
+
+.visualization {
+  height: 70%;
+  width: 75%;
+  background-color: #22262c;
+  border: 2px solid rgb(31, 36, 41);
+  gap: 2px;
+  border-radius: 2%;
+  padding: 20px;
+  padding-top: 35px;
+  box-sizing: border-box;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+
+.parametersTitle {
+  margin-bottom: auto;
+  margin-top: 35px;
+  font-size: 35px;
+}
+
+.buttonsWrapper {
+  margin-bottom: auto;
+  gap: 15px;
+}
+
+button {
+  width: 100px;
+  height: 25px;
+  border-radius: 8%;
+  background-color: #1b2029;
+  color: white;
+  border: none;
+}
+
+.elementInput {
+  background-color: #1b2029;
+  color: white;
+  border: none;
+  outline: none;
+  width: 100px;
+  box-sizing: border-box;
+  padding-left: 10px;
+  height: 25px;
+}
+
+.sliderContainer {
+  width: 80%;
+  gap: 5px;
+}
+
+output {
+  position: absolute;
+  left: 310px;
+}
+
+option:hover {
+  background-color: black;
 }
